<resources>
    <string name="app_name">Irreducible Representations Calculator</string>
    <string name="app">Irreducible Representation\nCalculator</string>
    <string name="app_description">This calculator allows you to reduce a reducible representation for a wide range of chemically relevant point groups using the reduction operator.</string>
    <string name="step_one"><b>Step 1:</b>\nPick the point group from the list below.</string>
    <string name="point_group_text">Character table list for chemically important point groups</string>
    <string name="nonaxial_group_text">Nonaxial\nGroups</string>
    <string name="cubic_group_text">Cubic\nGroups</string>
    <string name="linear_group_text">Linear\nGroups</string>
    <string name="dropdown_menu">Dropdown Layout</string>
    <string name="table_menu">Table Layout</string>

    <string name="c1_string">C<sub>1</sub></string>
    <string name="cs_string">C<sub>s</sub></string>
    <string name="ci_string">C<sub>i</sub></string>

    <string name="c2_string">C<sub>2</sub></string>
    <string name="c3_string">C<sub>3</sub></string>
    <string name="c4_string">C<sub>4</sub></string>
    <string name="c5_string">C<sub>5</sub></string>
    <string name="c6_string">C<sub>6</sub></string>

    <string name="d2_string">D<sub>2</sub></string>
    <string name="d3_string">D<sub>3</sub></string>
    <string name="d4_string">D<sub>4</sub></string>
    <string name="d5_string">D<sub>5</sub></string>
    <string name="d6_string">D<sub>6</sub></string>

    <string name="c2v_string">C<sub>2v</sub></string>
    <string name="c3v_string">C<sub>3v</sub></string>
    <string name="c4v_string">C<sub>4v</sub></string>
    <string name="c5v_string">C<sub>5v</sub></string>
    <string name="c6v_string">C<sub>6v</sub></string>

    <string name="c2h_string">C<sub>2h</sub></string>
    <string name="c3h_string">C<sub>3h</sub></string>
    <string name="c4h_string">C<sub>4h</sub></string>
    <string name="c5h_string">C<sub>5h</sub></string>
    <string name="c6h_string">C<sub>6h</sub></string>

    <string name="d2h_string">D<sub>2h</sub></string>
    <string name="d3h_string">D<sub>3h</sub></string>
    <string name="d4h_string">D<sub>4h</sub></string>
    <string name="d5h_string">D<sub>5h</sub></string>
    <string name="d6h_string">D<sub>6h</sub></string>

    <string name="d2d_string">D<sub>2d</sub></string>
    <string name="d3d_string">D<sub>3d</sub></string>
    <string name="d4d_string">D<sub>4d</sub></string>
    <string name="d5d_string">D<sub>5d</sub></string>
    <string name="d6d_string">D<sub>6d</sub></string>

    <string name="td_string">T<sub>d</sub></string>
    <string name="o_string">O</string>
    <string name="oh_string">O<sub>h</sub></string>
    
    <string name="cinf_string">C<sub>&#8734;v</sub></string>
    <string name="dinf_string">D<sub>&#8734;v</sub></string>

    <string name="step_2">Step 2: </string>
    <string name="step_2_descr">Enter the characters for the reducible representation of the C1 point group below.</string>
    <string name="e">E</string>
    <string name="r_reduc">r reducible</string>
    <string name="step_3">Step 3: </string>
    <string name="submit">SUBMIT</string>
    <string name="reset">RESET</string>
    <string name="step_3_descr">reduce a representation for a different point group</string>
    <string name="i">i</string>
    <string name="answerText">The reducible representation reduces to: </string>
    <string name="equation">Equation</string>

    <string name="numOfAtoms">Number of atoms: </string>

    <!--Strings for each point group description-->
    <string-array name="point_name">
        <item>SELECT A POINT GROUP</item>
        <item>Nonaxial Groups</item>
        <item>C<sub>n</sub> Groups</item>
        <item>C<sub>nv</sub> Groups</item>
        <item>C<sub>nh</sub> Groups</item>
        <item>D<sub>n</sub> Groups</item>
        <item>D<sub>nd</sub> Groups</item>
        <item>D<sub>nh</sub> Groups</item>
        <item>Cubic Groups</item>
        <item>Linear Groups</item>
    </string-array>

    <string-array name="nonaxial">
        <item>SELECT</item>
        <item>@string/c1_string</item>
        <item>@string/cs_string</item>
        <item>@string/ci_string</item>
    </string-array>

    <string-array name="cn">
        <item>SELECT</item>
        <item>@string/c2_string</item>
        <item>@string/c3_string</item>
        <item>@string/c4_string</item>
        <item>@string/c5_string</item>
        <item>@string/c6_string</item>
    </string-array>

    <string-array name="cnv">
        <item>SELECT</item>
        <item>@string/c2v_string</item>
        <item>@string/c3v_string</item>
        <item>@string/c4v_string</item>
        <item>@string/c5v_string</item>
        <item>@string/c6v_string</item>
    </string-array>

    <string-array name="cnh">
        <item>SELECT</item>
        <item>@string/c2h_string</item>
        <item>@string/c3h_string</item>
        <item>@string/c4h_string</item>
        <item>@string/c5h_string</item>
        <item>@string/c6h_string</item>
    </string-array>

    <string-array name="Dn">
        <item>SELECT</item>
        <item>@string/d2_string</item>
        <item>@string/d3_string</item>
        <item>@string/d4_string</item>
        <item>@string/d5_string</item>
        <item>@string/d6_string</item>
    </string-array>

    <string-array name="Dnd">
        <item>SELECT</item>
        <item>@string/d2d_string</item>
        <item>@string/d3d_string</item>
        <item>@string/d4d_string</item>
        <item>@string/d5d_string</item>
        <item>@string/d6d_string</item>
    </string-array>

    <string-array name="Dnh">
        <item>SELECT</item>
        <item>@string/d2h_string</item>
        <item>@string/d3h_string</item>
        <item>@string/d4h_string</item>
        <item>@string/d5h_string</item>
        <item>@string/d6h_string</item>
    </string-array>

    <string-array name="cubic">
        <item>SELECT</item>
        <item>@string/td_string</item>
        <item>@string/o_string</item>
        <item>@string/oh_string</item>
    </string-array>

    <string-array name="linear">
        <item>SELECT</item>
        <item>@string/cinf_string</item>
        <item>@string/dinf_string</item>
    </string-array>
</resources>
