<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/step_2"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/step_2_descr"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <!-- -START TABLE LAYOUT- -->
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:padding="4dp"
                android:text="@string/e"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:padding="4dp"
                android:text="2Cinf"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:padding="4dp"
                android:text="inf"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:padding="4dp"
                android:text="inf Sv"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow android:background="@drawable/table_outline">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/table_outline"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/r_reduc"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/cinfv_e_user_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/table_outline"
                android:inputType="number"
                android:minEms="2"
                android:padding="5dp" />

            <EditText
                android:id="@+id/cinfv_2cinf_user_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:inputType="number"
                android:minEms="2"
                android:padding="5dp" />

            <EditText
                android:id="@+id/cinfv_inf_user_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:inputType="number"
                android:minEms="2"
                android:padding="5dp" />

            <EditText
                android:id="@+id/cinfv_infsv_user_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:inputType="number"
                android:minEms="2"
                android:padding="5dp" />
        </TableRow>

    </TableLayout>
    <!-- -END TABLE LAYOUT- -->

    <TextView
        android:id="@+id/cinfv_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/step_3"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cinfv_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:onClick="result"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/cinfv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/answerText"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/cinfv_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp">

        <Button
            android:id="@+id/return1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bannerColor"
            android:onClick="return_1"
            android:padding="12dp"
            android:text="@string/step_3_descr"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#00FFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>