<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/step_2"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/c2v_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/step_2_descr"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <!-- -START TABLE LAYOUT- -->
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:padding="4dp"
                android:text="@string/e"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/c2v_c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:padding="4dp"
                android:text="C2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/c2v_sv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:padding="4dp"
                android:text="Sv"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/c2v_svp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:padding="4dp"
                android:text="Sv'"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow android:background="@drawable/table_outline">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/table_outline"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/r_reduc"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/c2v_e_user_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/table_outline"
                android:inputType="number"
                android:minEms="2"
                android:padding="5dp" />

            <EditText
                android:id="@+id/c2v_c2_user_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:inputType="number"
                android:minEms="2"
                android:padding="5dp" />

            <EditText
                android:id="@+id/c2v_sv_user_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:inputType="number"
                android:minEms="2"
                android:padding="5dp" />

            <EditText
                android:id="@+id/c2v_svp_user_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_outline"
                android:inputType="number"
                android:minEms="2"
                android:padding="5dp" />

        </TableRow>
    </TableLayout>
    <!-- -END TABLE LAYOUT- -->

    <Button
        android:id="@+id/c2v_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/bannerColor"
        android:onClick="result"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/c2v_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/answerText"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/c2v_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp">

        <Button
            android:id="@+id/c2v_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/return1"
            android:layout_marginBottom="10dp"
            android:background="@color/bannerColor"
            android:onClick="reset"
            android:padding="8dp"
            android:text="@string/reset"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/return1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bannerColor"
            android:onClick="return_1"
            android:padding="8dp"
            android:text="@string/step_3_descr"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#00FFFFFF"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>